自定义网站图标和文字显示

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -9,7 +9,8 @@
     <script src="<%= BASE_URL %>js/session-storage.js"></script>
     <!--    <script src="<%= BASE_URL %>js/echarts_5.3.2.min.js"></script>-->
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.0.2/dist/echarts.min.js"></script>
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <!--    <title><%= htmlWebpackPlugin.options.title %></title>-->
+    <title>长安三大才子</title>
 </head>
 <body>
 <noscript>
