--- a/web/public/index.html
+++ b/web/public/index.html
@@ -8,7 +8,7 @@
     <script src="<%= BASE_URL %>js/md5.js"></script>
     <script src="<%= BASE_URL %>js/session-storage.js"></script>
     <!--    <script src="<%= BASE_URL %>js/echarts_5.3.2.min.js"></script>-->
-    <script src="https://cdn.jsdelivr.net/npm/echarts@5.0.2/dist/echarts.min.js"></script>
+    <script src="https://lib.baomitu.com/echarts/5.0.2/echarts.min.js"></script>
     <!--    <title><%= htmlWebpackPlugin.options.title %></title>-->
     <title>长安三大才子</title>
 </head>
